--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: A workflow for my Hello World file
+name: A workflow for my WatchKart
 on: push
 jobs:
   build:
-    name: Hello world action
+    name: Hello! WatchKart here
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: ./action-a
         with:
-          MY_NAME: "Mona"
+          MY_NAME: "WatchKart"
